hphp/hack/test/typecheck/trait_reuse/trait_reuse_cyclic_class.php.exp
File "trait_reuse_cyclic_class.php", line 9, characters 7-14:
Cyclic class definition : `MyParent` `BadClass`  (Typing[4013])
File "trait_reuse_cyclic_class.php", line 10, characters 7-17:
Traits with final methods cannot be reused, and `ReusedTrait` is already used by `MyParent`. (Typing[4186])
File "trait_reuse_cyclic_class.php", line 9, characters 7-14:
`MyParent` is defined here
File "trait_reuse_cyclic_class.php", line 9, characters 24-31:
`MyParent` uses `BadClass`
File "trait_reuse_cyclic_class.php", line 10, characters 7-17:
`BadClass` uses `ReusedTrait`
File "trait_reuse_cyclic_class.php", line 6, characters 25-27:
`ReusedTrait` has a final method `foo`
File "trait_reuse_cyclic_class.php", line 13, characters 7-14:
Cyclic class definition : `MyParent` `BadClass`  (Typing[4013])
File "trait_reuse_cyclic_class.php", line 14, characters 7-17:
Traits with final methods cannot be reused, and `ReusedTrait` is already used by `BadClass`. (Typing[4186])
File "trait_reuse_cyclic_class.php", line 13, characters 7-14:
`BadClass` is defined here
File "trait_reuse_cyclic_class.php", line 13, characters 24-31:
`BadClass` uses `MyParent`
File "trait_reuse_cyclic_class.php", line 10, characters 7-17:
`MyParent` uses `ReusedTrait`
File "trait_reuse_cyclic_class.php", line 6, characters 25-27:
`ReusedTrait` has a final method `foo`
